--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -70,7 +70,8 @@
         {% if 
           product.handle == 'panorama-fertility-lab-test' or 
           product.handle == 'fertility-max-starter-kit' or
-          product.handle == 'fertility-plus-starter-kit'
+          product.handle == 'fertility-plus-starter-kit' or
+          product.handle == 'mira-max-ovum-bundle'
         %}
           <div class="col-lg-6 new-custom-product-detail">
               <product-info
@@ -2138,3 +2139,4 @@
   ]
 }
 {% endschema %}
+ 
