--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -88,7 +88,8 @@
             {% if 
               product.handle == 'panorama-fertility-lab-test' or 
               product.handle == 'fertility-max-starter-kit' or
-              product.handle == 'fertility-plus-starter-kit'
+              product.handle == 'fertility-plus-starter-kit' or
+              product.handle == 'mira-max-ovum-bundle'
             %}
             <span class="price-separater">&nbsp; — &nbsp;</span>
             <div class="no-js-hidden custom-price-section desktop-price" id="price-{{ section.id }}" role="status" {{ block.shopify_attributes }}>
