--- a/templates/page.lab-test-registration.liquid
+++ b/templates/page.lab-test-registration.liquid
@@ -1,15 +1,8 @@
 {% if customer %}  
-
-  <style>
-   #loader{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #21242d url('https://cdn.shopify.com/s/files/1/0755/9620/2277/files/Bouncy-Preloader.gif') no-repeat center;
-    z-index: 999;
-  } 
+{% render 'mira-loader' %}
+<style>
+   #loader_main{ display: none;} 
 </style>
-<div style="display:none;" id="loader"></div>
 
 <div class="lab-test-page">
     <div class="lab-test-top-links">
@@ -485,7 +478,7 @@
                 default_address2 = ""
               }
   
-              $("#loader").show();
+              $("#loader_main").show();
               var url = "https://labflow.ihdlab.com/api/order/register";
               var err_list = "";
                fetch(url, {
@@ -554,7 +547,7 @@
                       $.ajax(settings).done(function (response) {
                         //console.log(response);
                         $( "#registration-success" ).show();
-                        $("#loader").hide();
+                        $("#loader_main").hide();
                       });
                     }
                 })
@@ -569,7 +562,7 @@
                     }
                     $( "#registration-failed ul" ).append( err_list );
                     $( "#registration-failed" ).show(); 
-                    $("#loader").hide();
+                    $("#loader_main").hide();
                   });
           }
           else{
