add market sub folder to best sellers shop menu

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -131,7 +131,7 @@
                             <div class="dropdown-menu order-now-menu-box" aria-labelledby="dropdownMenuButton1">
                                 <div class="order-now-title"><span>Shop Now</span> <a href="#" class="order-now-close"><img src="{{ 'side_menu_close.svg' | file_url }}" alt="{{ icon | escape }}" title="" /></a></div>
                                 <ul class="dropdown-menu-inner">
-                                    <li class="best-sellers"><a class="dropdown-item" href="/products/best-sellers" style="color: #41C15F">Best Sellers</a></li>
+                                    <li class="best-sellers"><a class="dropdown-item" href="{{ sub_folder }}/products/best-sellers" style="color: #41C15F">Best Sellers</a></li>
                                     <li><a class="dropdown-item" href="{{ sub_folder }}/products/">Shop All</a></li>
 
                                     
