Added - join waiting list popup for fertility tea

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -173,7 +173,7 @@
                       
                       <div class="custom-buy-button">
         
-                      {% if product.handle == 'xyz' %}
+                      {% if product.handle == 'fertility-tea' %}
                         <a href="https://app.monstercampaigns.com/c/lc6objz5jjg4mbkugvkf/" target="_blank" rel="noopener noreferrer" class="btn-custom btn-pink">Join the waiting list</a>
                       {% else %}
                         {%- render 'buy-buttons', block: block, product: product, product_form_id: product_form_id, section_id: section.id, show_pickup_availability: true -%}
@@ -370,7 +370,7 @@
                             -%}
                           </div>
                           <div class="custom-buy-button">
-                            {% if product.handle == 'xyz' %}
+                            {% if product.handle == 'fertility-tea' %}
                               <a
                                 href="https://app.monstercampaigns.com/c/lc6objz5jjg4mbkugvkf/"
                                 target="_blank"
@@ -2139,4 +2139,3 @@
   ]
 }
 {% endschema %}
- 
