Love promo countdown banner live

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -468,7 +468,7 @@
     {% sections 'header-group' %}
     <div id="om-jjjxco9itpcbvmc8dwk6-holder"></div>
     <div id="om-oph4wyzrkxboyx7oef9t-holder"></div>
-    <!-- <div id="om-ewfendmhruzmybgyqr83-holder"></div> -->
+    <div id="om-emfefa01a70ipincu7s0-holder"></div>
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
