--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -55,6 +55,9 @@
 
   {% assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src' %}
 
+
+  {% render 'sticky-atc' %}
+
   <div class="product product--{{ section.settings.media_size }} product--{{ section.settings.media_position }} product--{{ section.settings.gallery_layout }} product--mobile-{{ section.settings.mobile_thumbnails }} grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% else %}product--no-media{% endif %}">
     <div class="container">
       <div class="row">
@@ -343,7 +346,7 @@
                         </p>
       
                       {%- when 'variant_picker' -%}
-                        <div class="custom_pro_variant">
+                        <div id="atc-section" class="custom_pro_variant">
                           {% render 'product-variant-picker',
                             product: product,
                             block: block,
