--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -47,7 +47,7 @@ align-self: stretch;
     } 
 .valuecont_block p{
     color: #000;
-    font-family: Inter;
+    font-family: "Aeonik Pro";
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
