--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -205,7 +205,7 @@
           <div class="valuecont_mob">
             <div class="valuecont_block">
               {% if settings.image_1 != blank %}
-                <img src="{{ settings.image_1 | image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_1 | img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_1 != blank %}
                 <p>{{ settings.text_1 }}</p>
@@ -213,7 +213,7 @@
             </div>
             <div class="valuecont_block">
               {% if settings.image_2 != blank %}
-                <img src="{{ settings.image_2 | image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_2 | img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_2 != blank %}
                 <p>{{ settings.text_2 }}</p>
@@ -221,7 +221,7 @@
             </div>
             <div class="valuecont_block">
               {% if settings.image_3 != blank %}
-                <img src="{{ settings.image_3 | image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_3 | img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_3 != blank %}
                 <p>{{ settings.text_3 }}</p>
@@ -242,7 +242,7 @@
           <div class="valuecont">
             <div class="valuecont_block">
               {% if settings.image_1 != blank %}
-                <img src="{{ settings.image_1 |  image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_1 |  img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_1 != blank %}
                 <p>{{ settings.text_1 }}</p>
@@ -250,7 +250,7 @@
             </div>
             <div class="valuecont_block">
               {% if settings.image_2 != blank %}
-                <img src="{{ settings.image_2 |  image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_2 | img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_2 != blank %}
                 <p>{{ settings.text_2 }}</p>
@@ -258,7 +258,7 @@
             </div>
             <div class="valuecont_block">
               {% if settings.image_3 != blank %}
-                <img src="{{ settings.image_3 | image_url: '80x80' }}" width="80" height="80">
+                <img src="{{ settings.image_3 | img_url: '80x80' }}" width="80" height="80">
               {% endif %}
               {% if settings.text_3 != blank %}
                 <p>{{ settings.text_3 }}</p>
