--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -12,8 +12,8 @@
 .valuecont_mob {
     display: flex;
     border-top: 1px solid #DBDBDB;
-    max-width: 368px;
-    padding: 48px 0px;
+    width: auto;
+    padding: 32px 0px;
     flex-direction: column;
     align-items: flex-start;
     gap: 23px;
@@ -25,7 +25,7 @@
         border-top: 1px solid #DBDBDB;
         max-width: 368px;
         margin-top: 48px;
-        padding: 48px 0px;
+        padding: 32px 0px;
         flex-direction: column;
         align-items: flex-start;
         gap: 23px;
@@ -50,7 +50,7 @@ align-self: stretch;
 .valuecont_block p{
     color: #000;
     font-family: "Aeonik Pro";
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
