--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -34,6 +34,10 @@
     .valuecont_mob {
         display: none;
     }
+
+    .valuecont_block p{
+        font-size: 16px;
+    }
 }
 
 .valuecont_block{
