--- a/assets/value-props.css
+++ b/assets/value-props.css
@@ -12,7 +12,7 @@
 .valuecont_mob {
     display: flex;
     border-top: 1px solid #DBDBDB;
-    max-width: 368px;
+    width: auto;
     padding: 32px 0px;
     flex-direction: column;
     align-items: flex-start;
@@ -36,7 +36,7 @@
     }
 
     .valuecont_block p{
-        font-size: 16px;
+        font-size: 16px !important;
     }
 }
 
