--- a/sections/bf-bundle-sections.liquid
+++ b/sections/bf-bundle-sections.liquid
@@ -12,8 +12,11 @@
 {% else %}
 {% assign sub_folder = '' %}
 {% endif %}
+
+{% render 'sticky-atc' %}
+
 <section class="bf-bundle-header-banner">
-    <div class="container">
+    <div id="atc-section" class="container">
         <div class="bf-bundle-banner-content">
             <div class="limited-edition-label"><span>Limited Edition!</span></div>
             <h5>Special bundle: Science helps you get pregnant faster</h5>
