--- a/sections/bf-wands-bundle-sections.liquid
+++ b/sections/bf-wands-bundle-sections.liquid
@@ -12,6 +12,9 @@
 {% else %}
 {% assign sub_folder = '' %}
 {% endif %}
+
+{% render 'sticky-atc' %}
+
 <section class="bf-bundle-header-banner">
     <div class="container">
         <div class="bf-bundle-banner-content">
@@ -23,7 +26,7 @@
                 <span class="plat-price">{{ all_products['wands-bundle'].price | money }}</span>
                 <div class="old-price">{{ all_products['wands-bundle'].compare_at_price | money }}</div>
             </div>
-            <div class="bf-bundle-banner-btn">
+            <div id="atc-section" class="bf-bundle-banner-btn">
                 <form method="post" action="{{ sub_folder }}/cart/add" class="add-to-cart">
                     <input type="hidden" name="quantity" value="1">
                     <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
