--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -43,7 +43,7 @@
       {{ block.shopify_attributes }}
     >
       {%- for option in product.options_with_values -%}
-        <div id="atc-section" class="product-form__input product-form__input--dropdown">
+        <div class="product-form__input product-form__input--dropdown">
           <p class="form__label variant-label" for="Option-{{ section.id }}-{{ forloop.index0 }}">
             {{ option.name }}
           </p>
