--- a/templates/product.more_for_fertility.liquid
+++ b/templates/product.more_for_fertility.liquid
@@ -45,6 +45,9 @@
                     <span class="plat-price">{{ all_products['basal-body-thermometer'].price | money }}</span>
                     <div class="old-price">{{ all_products['basal-body-thermometer'].compare_at_price | money }}</div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'basal-body-thermometer', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink"
                     >Buy&nbsp;now</a
                   >
@@ -70,6 +73,9 @@
                     <span class="plat-price">{{ all_products['fertility-tea'].price | money }}</span>
                     <div class="old-price">{{ all_products['fertility-tea'].compare_at_price | money }}</div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/fertility-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
                 </div>
               </div>
@@ -91,6 +97,9 @@
                     <span class="plat-price">{{ all_products['fertility-tea-ww'].price | money }}</span>
                     <div class="old-price">{{ all_products['fertility-tea-ww'].compare_at_price | money }}</div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'fertility-tea-ww', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/fertility-tea-ww" class="btn-custom btn-pink">Buy&nbsp;now</a>
                 </div>
               </div>
@@ -114,6 +123,9 @@
                     <span class="plat-price">{{ all_products['pregnancy-tea'].price | money }}</span>
                     <div class="old-price">{{ all_products['pregnancy-tea'].compare_at_price | money }}</div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'pregnancy-tea', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/pregnancy-tea" class="btn-custom btn-pink">Buy&nbsp;now</a>
                 </div>
               </div>
@@ -135,6 +147,9 @@
                   <div class="price-btn-row">
                     <span class="plat-price">{{ all_products['prenatal-multivitamin'].price | money }}</span>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'prenatal-multivitamin', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink">Buy&nbsp;now</a>
                 </div>
               </div>
@@ -153,6 +168,9 @@
                 <div class="price-btn-row">
                   <span class="plat-price">{{ all_products.academy.price | money }}</span>
                 </div>
+
+                {% include 'subscription-plp-endrock', with string_variable: 'academy', sub_folder: sub_folder %}
+
                 <a href="{{ sub_folder }}/products/academy" class="btn-custom btn-pink">Buy&nbsp;now</a>
               </div>
             </div>
@@ -175,6 +193,9 @@
                 <div class="price-btn-row">
                   <span class="plat-price">{{ all_products['fertility-meditations'].price | money }}</span>
                 </div>
+
+                {% include 'subscription-plp-endrock', with string_variable: 'fertility-meditations', sub_folder: sub_folder %}
+
                 <a href="{{ sub_folder }}/products/fertility-meditations" class="btn-custom btn-pink">Buy&nbsp;now</a>
               </div>
             </div>
@@ -200,6 +221,9 @@
                       {{ all_products['kgoal-smart-kegel-exerciser'].compare_at_price | money }}
                     </div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'kgoal-smart-kegel-exerciser', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/kgoal-smart-kegel-exerciser" class="btn-custom btn-pink"
                     >Buy&nbsp;now</a
                   >
@@ -228,6 +252,9 @@
                       {{ all_products['biogenesis-fertility-lubricant'].compare_at_price | money }}
                     </div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'biogenesis-fertility-lubricant', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/biogenesis-fertility-lubricant" class="btn-custom btn-pink"
                     >Buy&nbsp;now</a
                   >
@@ -251,6 +278,9 @@
                   <span class="plat-price">{{ all_products['gift-card'].price | money }}</span>
                   <div class="old-price"></div>
                 </div>
+
+                {% include 'subscription-plp-endrock', with string_variable: 'gift-card', sub_folder: sub_folder %}
+
                 <a href="{{ sub_folder }}/products/gift-card/" class="btn-custom btn-pink">Buy&nbsp;now</a>
               </div>
             </div>
@@ -275,6 +305,9 @@
                     <span class="plat-price">{{ all_products['panorama-fertility-lab-test'].price | money }}</span>
                     <div class="old-price"></div>
                   </div>
+
+                  {% include 'subscription-plp-endrock', with string_variable: 'panorama-fertility-lab-test', sub_folder: sub_folder %}
+
                   <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink"
                     >Buy&nbsp;now</a
                   >
