--- a/templates/product.virtual_consultations.liquid
+++ b/templates/product.virtual_consultations.liquid
@@ -40,6 +40,9 @@
                   <span class="plat-price">{{ all_products.coaching.first_available_variant.price | money }}</span>
                   <div class="old-price">{{ all_products.coaching.compare_at_price | money }}</div>
                 </div>
+
+                {% include 'subscription-plp-endrock', with string_variable: 'coaching', sub_folder: sub_folder %}
+
                 <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink">Buy&nbsp;now</a>
               </div>
             </div>
